--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@vx/mock-data": "0.0.179",
     "@vx/scale": "0.0.179",
     "@vx/shape": "0.0.179",
+    "bootstrap": "^4.1.3",
     "chart.js": "^1.1.1",
     "numeral": "^2.0.6",
     "react": "^16.5.2",
@@ -16,8 +17,10 @@
     "react-file-reader": "^1.1.4",
     "react-intl": "^2.7.1",
     "react-intl-formatted-duration": "^2.0.2",
+    "react-loader": "^2.4.5",
     "react-scripts": "2.0.5",
-    "react-table": "^6.8.6"
+    "react-table": "^6.8.6",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
