--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@vx/shape": "0.0.179",
     "bootstrap": "^4.1.3",
     "chart.js": "^1.1.1",
+    "match-sorter": "^2.3.0",
     "numeral": "^2.0.6",
     "react": "^16.5.2",
     "react-chartjs": "^1.2.0",
