--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "bootstrap": "^4.1.3",
     "chart.js": "^1.1.1",
     "match-sorter": "^2.3.0",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "numeral": "^2.0.6",
     "react": "^16.5.2",
     "react-calendar-heatmap": "^1.7.0",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.5.2",
     "react-file-reader": "^1.1.4",
+    "react-heatmap-grid": "^0.5.0",
     "react-intl": "^2.7.1",
     "react-intl-formatted-duration": "^2.0.2",
     "react-loader": "^2.4.5",
+    "react-moment": "^0.8.2",
     "react-scripts": "2.0.5",
     "react-slick": "^0.23.2",
     "react-table": "^6.8.6",
