--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@vx/shape": "0.0.179",
     "bootstrap": "^4.1.3",
     "chart.js": "^1.1.1",
+    "html2canvas": "^1.0.0-alpha.12",
     "jsonp": "^0.2.1",
     "match-sorter": "^2.3.0",
     "moment": "^2.22.2",
