--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-slick": "^0.23.2",
     "react-table": "^6.8.6",
     "react-tooltip": "^3.9.0",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "taffydb": "^2.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
